[package]
name = "clockabilly"
authors = ["Applied Computing Research Labs"]
description = "Trait wrapper around chrono for testing"
version = "0.1.1"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.38"
tokio = { version = "1.44.2", features = ["time"] }

[features]
mock = []

[[example]]
name = "basic"
required-features = ["mock"]
